@@ -75,6 +75,7 @@ BOOL_SETT_GETSET("ShiftToTiltAxis", mWinApp->mScope->, ShiftToTiltAxis)
 BOOL_SETT_GETSET("ApplyISoffset", mWinApp->mScope->, ApplyISoffset)
 BOOL_SETT_GETSET("UsePiezoForLDAxis", mWinApp->mScope->, UsePiezoForLDaxis)
 BOOL_SETT_GETSET("AdjustFocusForProbe", mWinApp->mScope->, AdjustFocusForProbe)
+INT_SETT_GETSET("NormalizeAllOnMagChange", mWinApp->mScope->, NormAllOnMagChange)
 BOOL_SETT_GETSET("NormAutofocusViaView", mWinApp->mFocusManager->, NormalizeViaView)
 BOOL_SETT_GETSET("TrimBordersInAutoalign", mWinApp->mShiftManager->, TrimDarkBorders)
 INT_SETT_GETSET("DisableAutoTrim", mWinApp->mShiftManager->, DisableAutoTrim)
