@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance.
 ============================================================================
+7/3/17: Added special option to normalize all lenses when changing mag within
+LM or on all mag changes; when changing between LM and nonLM, it now does
+objective normalization too and uses one normalize call on FEI scopes.
+
 6/25/17: Fix output of a pcm file for other Records when aligning whole tilt
 series in IMOD, and two other issues when frame-saving is automatically
 imposed with aligning in IMOD (In 3.6).
